--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
         .result-card {
             background: #fff; border-radius: 25px; padding: 25px;
             margin-top: 25px; border-left: 8px solid #000; box-shadow: 0 10px 25px rgba(0,0,0,0.05);
+            animation: slideUp 0.4s ease;
         }
+
+        @keyframes slideUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
 
         .info-row { display: flex; justify-content: space-between; padding: 12px 0; border-bottom: 1px solid #f8f9fa; flex-direction: row-reverse; }
         .label { font-weight: bold; color: var(--accent); min-width: 90px; text-align: left; }
@@ -102,7 +105,7 @@
     <div id="instructions">
         <b>💡 تعليمات الاستخدام:</b>
         • للحصول على <b>IMEI</b> أو <b>السيريال</b>: اطلب الكود <span dir="ltr">*#06#</span><br>
-         <b>تنبيه:</b> عدم ظهور الجهاز لا يعني أنه سليم؛ قد يكون صاحبه لم يعمم عنه، أو لم تصل البيانات للنظام بعد.
+         <b>تنبيه:</b> عدم ظهور الجهاز لا يعني أنه سليم؛ قد يكون صاحبه لم يعمم عنه، أو لم تصل بياناته للنظام بعد.
     </div>
 
     <div id="results"></div>
@@ -112,11 +115,11 @@
     const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSF5W0EW-E_36UGUSpTWJkXx7gaLqjUbyz90syivKGp9D4GFWIm_yQmQxaNo_2lUmN1pM0BjH4bQPnI/pub?output=csv';
     let database = [];
 
-    // دالة جلب البيانات مع معالجة الخطأ
     async function loadData() {
         try {
             const response = await fetch(url);
             const data = await response.text();
+            // معالجة البيانات وتنظيفها من أي مسافات زائدة
             database = data.split('\n').filter(row => row.trim() !== '').map(row => 
                 row.split(',').map(cell => cell.replace(/"/g, '').trim())
             );
@@ -125,8 +128,7 @@
             document.getElementById('status-text').innerHTML = "🟢 السيرفر جاهز";
             document.getElementById('status-text').style.color = "#27ae60";
         } catch (error) {
-            document.getElementById('loader').style.display = "none";
-            document.getElementById('status-text').innerHTML = "🔴 فشل الاتصال (تحقق من الإنترنت)";
+            document.getElementById('status-text').innerHTML = "🔴 فشل الاتصال بالسيرفر";
             document.getElementById('status-text').style.color = "#e74c3c";
         }
     }
@@ -134,15 +136,12 @@
     loadData();
 
     function doSearch() {
-        const query = document.getElementById('q').value.trim();
+        const query = document.getElementById('q').value.trim().toLowerCase();
         const searchType = document.getElementById('searchType').value;
         const resDiv = document.getElementById('results');
         const insBox = document.getElementById('instructions');
         
-        if (database.length === 0) {
-            alert("يرجى الانتظار حتى يتم تحميل البيانات");
-            return;
-        }
+        if (database.length === 0) return;
 
         resDiv.innerHTML = "";
         if (!query) return;
@@ -157,9 +156,19 @@
 
             row.forEach((cell, idx) => {
                 const head = headers[idx] ? headers[idx].toLowerCase() : "";
-                if (searchType === 'imei' && head.includes('imei') && cell === query) isMatch = true;
-                else if (searchType === 'serial' && head.includes('serial') && cell === query) isMatch = true;
-                else if (searchType === 'name' && (head.includes('name') || head.includes('اسم')) && cell.toLowerCase().includes(query.toLowerCase())) isMatch = true;
+                const cellValue = cell ? cell.toLowerCase() : "";
+
+                if (searchType === 'imei') {
+                    if (head.includes('imei') && cellValue === query) isMatch = true;
+                } 
+                else if (searchType === 'serial') {
+                    if ((head.includes('serial') || head.includes('سيريال')) && cellValue === query) isMatch = true;
+                }
+                else if (searchType === 'name') {
+                    // بحث ذكي بالاسم: يبحث في أي عمود يخص الجهاز أو الاسم ويقبل البحث الجزئي
+                    const isNameHeader = head.includes('name') || head.includes('اسم') || head.includes('device') || head.includes('type') || head.includes('نوع') || head.includes('جهاز');
+                    if (isNameHeader && cellValue.includes(query)) isMatch = true;
+                }
             });
             if (isMatch) foundResults.push(row);
         }
@@ -174,7 +183,8 @@
                     if (cell) {
                         const label = headers[idx] || "بيان";
                         let val = cell;
-                        if (label.toLowerCase().includes('phone') || label.toLowerCase().includes('هاتف')) {
+                        // إخفاء الرقم في بحث الاسم
+                        if (label.toLowerCase().includes('phone') || label.toLowerCase().includes('هاتف') || label.toLowerCase().includes('رقم')) {
                             phone = cell;
                             if (searchType === 'name') val = "⚠️ مخفي للخصوصية";
                         }
