--- a/add.html
+++ b/add.html
@@ -91,7 +91,7 @@
     </div>
 
     <div class="form-wrapper">
-        <iframe src="https://docs.google.com/forms/d/e/ضع_هنا_رابط_النموذج/viewform?embedded=true">جاري التحميل...</iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfCbUbe_2K7sWAGF41OGZbCt9d_LH73zhGRK1yXPBMgb-hyQQ/viewform?embedded=true">جاري التحميل...</iframe>
     </div>
 
     <a href="index.html" class="btn-back">⬅️ العودة لمحرك البحث</a>
