--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .container { width: 100%; max-width: 450px; background: white; padding: 25px; border-radius: 30px; box-shadow: 0 15px 50px rgba(0,0,0,0.3); }
         .main-title { text-align: center; font-size: 26px; font-weight: 900; margin-bottom: 5px; }
         .sub-title { text-align: center; font-size: 11px; color: var(--accent); margin-bottom: 20px; font-weight: bold; }
-        #status-text { font-size: 12px; text-align: center; display: block; margin-bottom: 10px; color: #888; }
+        #status-text { font-size: 12px; text-align: center; display: block; margin-bottom: 10px; color: #888; font-weight: bold; }
         .search-area select, .search-area input { width: 100%; padding: 14px; border-radius: 15px; border: 2px solid #eee; margin-bottom: 12px; font-size: 15px; font-weight: bold; outline: none; box-sizing: border-box; text-align: center; }
         .search-area button { width: 100%; background: #000; color: white; border: none; padding: 18px; border-radius: 20px; font-size: 18px; font-weight: bold; cursor: pointer; }
         .result-card { background: #fff; border-radius: 25px; padding: 20px; margin-top: 25px; border-left: 8px solid #000; box-shadow: 0 10px 25px rgba(0,0,0,0.05); animation: slideUp 0.4s ease; }
@@ -40,20 +40,23 @@
 </div>
 
 <script>
-    // الرابط لورقة Sheet 1
+    // تم استخراج رابط الـ CSV المباشر لورقة Sheet 1 بناءً على ملفك
     const url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSF5W0EW-E_36UGUSpTWJkXx7gaLqjUbyz90syivKGp9D4GFWIm_yQmQxaNo_2lUmN1pM0BjH4bQPnI/pub?gid=0&single=true&output=csv';
     let database = [];
 
     async function loadData() {
         try {
-            const response = await fetch(url);
+            const response = await fetch(url + "&t=" + new Date().getTime());
             const data = await response.text();
             database = data.split('\n').filter(row => row.trim() !== '').map(row => 
                 row.split(',').map(cell => cell.replace(/^"(.*)"$/, '$1').trim())
             );
             document.getElementById('status-text').innerHTML = "🟢 السيرفر جاهز";
             document.getElementById('status-text').style.color = "#27ae60";
-        } catch (e) { document.getElementById('status-text').innerHTML = "🔴 خطأ في الاتصال"; }
+        } catch (e) { 
+            document.getElementById('status-text').innerHTML = "🔴 خطأ: تأكد من نشر Sheet 1 كـ CSV"; 
+            document.getElementById('status-text').style.color = "#e74c3c";
+        }
     }
     loadData();
 
@@ -69,15 +72,13 @@
 
         for (let i = 1; i < database.length; i++) {
             const row = database[i];
-            let isMatch = false;
-            // حسب الشيت الجديد: B=1(الشركة), C=2(الموديل), E=4(IMEI), F=5(السيريال), G=6(المالك)
-            if (searchType === 'imei' && row[4] && row[4].toLowerCase() === query) isMatch = true;
-            else if (searchType === 'serial' && row[5] && row[5].toLowerCase() === query) isMatch = true;
+            // الترتيب حسب صورتك: 0=التاريخ, 1=الشركة, 2=الموديل, 3=اللون, 4=IMEI, 5=السيريال, 6=المالك
+            if (searchType === 'imei' && row[4] && row[4].toLowerCase() === query) found.push(row);
+            else if (searchType === 'serial' && row[5] && row[5].toLowerCase() === query) found.push(row);
             else if (searchType === 'name') {
-                const info = (row[1] + " " + row[2]).toLowerCase();
-                if (info.includes(query)) isMatch = true;
+                const info = ((row[1] || "") + " " + (row[2] || "")).toLowerCase();
+                if (info.includes(query)) found.push(row);
             }
-            if (isMatch) found.push(row);
         }
 
         if (found.length > 0) {
@@ -85,14 +86,20 @@
                 const card = document.createElement('div');
                 card.className = 'result-card';
                 let html = "";
-                // نعرض من العمود 1 إلى 6 (نتجاهل التاريخ في العمود 0)
+                // عرض البيانات من الشركة (1) إلى المالك (6)
                 for(let j=1; j<=6; j++) {
                     let val = row[j] || "---";
-                    if (j === 6 && searchType === 'name') val = "⚠️ مخفي للخصوصية";
+                    if (j === 6 && searchType === 'name') val = "⚠️ مخفي";
                     html += `<div class="info-row"><span class="label">${labels[j-1]}</span><span class="value">${val}</span></div>`;
                 }
                 if (row[6] && searchType !== 'name') {
                     html += `<div style="margin-top:15px;"><a href="tel:${row[6]}" style="display:block; background:#000; color:#fff; text-decoration:none; padding:12px; border-radius:15px; text-align:center; font-weight:bold;">📞 اتصال بالمالك</a></div>`;
                 }
                 card.innerHTML = html;
-                res
+                resDiv.appendChild(card);
+            });
+        } else { resDiv.innerHTML = `<div class="error-msg">⚠️ لم يتم العثور على نتائج</div>`; }
+    }
+</script>
+</body>
+</html>
