--- a/add.html
+++ b/add.html
@@ -68,7 +68,7 @@
     const btn = document.getElementById('submitBtn');
 
     // رابط الـ Script المخصص لاستقبال البيانات (Web App URL)
-    const scriptURL = 'YOUR_APPS_SCRIPT_WEB_APP_URL';
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyS8x7lZ40mEzbgP3tOw56ZxHnCd2XUk2dC7vdbma4J8zVDlkUkrSgivf3HApBowocjSg/exec';
 
     form.addEventListener('submit', e => {
         e.preventDefault();
