--- a/admin.html
+++ b/admin.html
@@ -6,15 +6,16 @@
     <title>لوحة تحكم البلاغات</title>
     <style>
         body { font-family: sans-serif; background: #121212; color: white; margin: 0; padding: 10px; }
-        #login-screen { text-align: center; margin-top: 50px; background: #fff; color: #000; padding: 30px; border-radius: 20px; max-width: 350px; margin-left: auto; margin-right: auto; }
+        #login-screen { text-align: center; margin-top: 50px; background: #fff; color: #000; padding: 30px; border-radius: 20px; max-width: 350px; margin: auto; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
         input[type="password"] { width: 100%; padding: 12px; margin: 15px 0; border-radius: 10px; border: 1px solid #ddd; text-align: center; font-size: 18px; box-sizing: border-box; }
-        .card { background: #fff; color: #333; border-radius: 20px; padding: 15px; margin-bottom: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); max-width: 450px; margin-left: auto; margin-right: auto; }
+        .card { background: #fff; color: #333; border-radius: 20px; padding: 15px; margin-bottom: 15px; box-shadow: 0 4px 10px rgba(0,0,0,0.3); max-width: 450px; margin: auto; }
         .info-row { margin-bottom: 8px; }
         .info-row label { display: block; font-size: 11px; color: #e74c3c; font-weight: bold; }
         .info-row input { width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 8px; box-sizing: border-box; font-size: 15px; font-weight: bold; }
         .actions { display: flex; gap: 10px; margin-top: 15px; }
         .btn { flex: 1; padding: 12px; border: none; border-radius: 10px; font-weight: bold; cursor: pointer; color: white; }
         .btn-ok { background: #27ae60; } .btn-no { background: #e74c3c; }
+        #status-msg { text-align: center; color: #888; margin-top: 20px; }
     </style>
 </head>
 <body>
@@ -27,7 +28,7 @@
 
     <div id="admin-content" style="display:none;">
         <h2 style="text-align:center">مراجعة البلاغات</h2>
-        <div id="list">جاري تحميل البيانات...</div>
+        <div id="list"><p id="status-msg">جاري تحميل البيانات...</p></div>
     </div>
 
 <script>
@@ -43,32 +44,52 @@
     }
 
     async function loadData() {
-        const res = await fetch(csvUrl + "?t=" + Date.now());
-        const text = await res.text();
-        const rows = text.split('\n').filter(r => r.trim() !== '').map(r => r.split(',').map(c => c.replace(/^"(.*)"$/, '$1').trim()));
         const list = document.getElementById('list');
-        list.innerHTML = rows.length > 1 ? "" : "<p style='text-align:center'>لا توجد طلبات</p>";
+        try {
+            // إضافة متمم زمني لكسر الكاش
+            const response = await fetch(csvUrl + "&cachebreak=" + new Date().getTime());
+            const data = await response.text();
+            
+            // معالجة البيانات وتقسيمها لصفوف
+            const rows = data.split(/\r?\n/).filter(row => row.trim() !== "").map(row => {
+                // تقسيم الصف مع مراعاة الفواصل داخل النصوص
+                return row.split(/,(?=(?:(?:[^"]*"){2})*[^Internal"]*$)/).map(c => c.replace(/^"|"$/g, '').trim());
+            });
 
-        for (let i = 1; i < rows.length; i++) {
-            const card = document.createElement('div');
-            card.className = 'card';
-            card.innerHTML = `
-                <div class="info-row"><label>الشركة</label><input type="text" id="br-${i+1}" value="${rows[i][1]}"></div>
-                <div class="info-row"><label>الموديل</label><input type="text" id="mo-${i+1}" value="${rows[i][2]}"></div>
-                <div class="info-row"><label>اللون</label><input type="text" id="cl-${i+1}" value="${rows[i][3]}"></div>
-                <div class="info-row"><label>IMEI</label><input type="text" id="im-${i+1}" value="${rows[i][4]}"></div>
-                <div class="info-row"><label>السيريال</label><input type="text" id="sn-${i+1}" value="${rows[i][5]}"></div>
-                <div class="info-row"><label>الهاتف</label><input type="text" id="ph-${i+1}" value="${rows[i][6]}"></div>
-                <div class="actions">
-                    <button class="btn btn-ok" onclick="handle(${i+1}, 'approve', this)">نشر ✅</button>
-                    <button class="btn btn-no" onclick="handle(${i+1}, 'delete', this)">حذف 🗑️</button>
-                </div>`;
-            list.appendChild(card);
+            if (rows.length <= 1) {
+                list.innerHTML = "<p style='text-align:center; padding:20px; color:#888;'>لا توجد بلاغات جديدة حالياً</p>";
+                return;
+            }
+
+            list.innerHTML = ""; // مسح رسالة التحميل
+            for (let i = 1; i < rows.length; i++) {
+                const r = rows[i];
+                const card = document.createElement('div');
+                card.className = 'card';
+                card.innerHTML = `
+                    <div class="info-row"><label>الشركة</label><input type="text" id="br-${i+1}" value="${r[1] || ''}"></div>
+                    <div class="info-row"><label>الموديل</label><input type="text" id="mo-${i+1}" value="${r[2] || ''}"></div>
+                    <div class="info-row"><label>اللون</label><input type="text" id="cl-${i+1}" value="${r[3] || ''}"></div>
+                    <div class="info-row"><label>IMEI</label><input type="text" id="im-${i+1}" value="${r[4] || ''}"></div>
+                    <div class="info-row"><label>السيريال</label><input type="text" id="sn-${i+1}" value="${r[5] || ''}"></div>
+                    <div class="info-row"><label>الهاتف</label><input type="text" id="ph-${i+1}" value="${r[6] || ''}"></div>
+                    <div class="actions">
+                        <button class="btn btn-ok" onclick="handle(${i+1}, 'approve', this)">نشر ✅</button>
+                        <button class="btn btn-no" onclick="handle(${i+1}, 'delete', this)">حذف 🗑️</button>
+                    </div>`;
+                list.appendChild(card);
+            }
+        } catch (err) {
+            list.innerHTML = "<p style='text-align:center; color:red;'>فشل تحميل البيانات. تأكد من اتصال الإنترنت.</p>";
+            console.error(err);
         }
     }
 
     async function handle(row, type, btn) {
+        if(!confirm("تأكيد العملية؟")) return;
+        const originalText = btn.innerText;
         btn.innerText = "..."; btn.disabled = true;
+
         let url = `${scriptUrl}?row=${row}&action=${type === 'approve' ? 'approve_with_edit' : 'delete_pending'}`;
         if (type === 'approve') {
             url += `&brand=${encodeURIComponent(document.getElementById('br-'+row).value)}` +
@@ -78,8 +99,18 @@
                    `&serial=${encodeURIComponent(document.getElementById('sn-'+row).value)}` +
                    `&owner=${encodeURIComponent(document.getElementById('ph-'+row).value)}`;
         }
-        await fetch(url, { mode: 'no-cors' });
-        btn.closest('.card').remove();
+
+        try {
+            await fetch(url, { mode: 'no-cors' });
+            btn.closest('.card').style.opacity = "0.5";
+            setTimeout(() => {
+                btn.closest('.card').remove();
+                if(document.querySelectorAll('.card').length === 0) loadData();
+            }, 500);
+        } catch (e) {
+            alert("حدث خطأ أثناء الإرسال");
+            btn.innerText = originalText; btn.disabled = false;
+        }
     }
 </script>
 </body>
